# SeekerOfLight

./: .dockerignore  .env  .env.example  .gitignore  License.md  README.md  compose.yml  docker-entrypoint.sh  dockerfile  manage.py  pyproject.toml  schema.yml
SeekerOfLight/: asgi.py  settings.py  urls.py  wsgi.py
bruno/: Change Password.bru  Login.bru  Refresh.bru  Register.bru  Reset Password Confirm.bru  User Profile - PATCH.bru  User Profile - PUT.bru  User Profile.bru  bruno.json  collection.bru
bruno/content/: Single Lesson.bru  bookmarked.bru  lessons in level.bru  levels.bru  progress next.bru  progress summary.bru  progress.bru  speicfic level.bru
bruno/environments/: SoL.bru
bruno/users/: Change Password.bru  Login.bru  Refresh.bru  Reset Password Confirm.bru  Reset Password.bru  User Profile - PATCH.bru  User Profile - PUT.bru  User Profile.bru  activate account.bru
core/: admin.py  models.py  serializers.py  urls.py  views.py
core/management/commands/: populate_db.py
core/migrations/: 0001_initial.py  0002_alter_level_table.py  0003_lesson_video_link.py  0004_level_unlock_threshold.py  0005_rename_video_link_lesson_video.py
users/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_date_of_birth_alter_user_phone_number.py  0002_remove_user_avatar_remove_user_date_of_birth_and_more.py  0003_user_country_user_date_of_birth.py  0003_user_is_staff.py  0004_alter_user_country.py  0005_alter_user_table.py
